[gd_scene load_steps=9 format=3 uid="uid://baefucmct7frt"]

[ext_resource type="Script" path="res://levels/door_bullet/door_bullet.gd" id="1_taw11"]
[ext_resource type="Texture2D" uid="uid://b0y37otwo1wy6" path="res://levels/door/gate-03.png" id="2_poetf"]
[ext_resource type="Texture2D" uid="uid://r5gdvx3n1cl3" path="res://levels/door/gate-02.png" id="3_dtb0m"]
[ext_resource type="Texture2D" uid="uid://5m4u4ntywt2n" path="res://levels/door/gate-01.png" id="4_pcl3m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rkir0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_poetf")
}, {
"duration": 1.0,
"texture": ExtResource("3_dtb0m")
}, {
"duration": 1.0,
"texture": ExtResource("4_pcl3m")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pcl3m")
}, {
"duration": 1.0,
"texture": ExtResource("3_dtb0m")
}, {
"duration": 1.0,
"texture": ExtResource("2_poetf")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwnq7"]
size = Vector2(37, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hanav"]
size = Vector2(7, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5ewf"]
size = Vector2(40.5, 48)

[node name="DoorBullet" type="StaticBody2D" groups=["Door"]]
script = ExtResource("1_taw11")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_rkir0")
animation = &"close"
autoplay = "close"
frame = 1
frame_progress = 0.084871
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(18.5, -24)
shape = SubResource("RectangleShape2D_lwnq7")

[node name="ExitArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D"]
position = Vector2(3.5, -24)
shape = SubResource("RectangleShape2D_hanav")
debug_color = Color(0.17741, 0.643142, 3.85046e-07, 0.42)

[node name="ActivateDoorArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 384

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateDoorArea2D"]
position = Vector2(27.75, -24)
shape = SubResource("RectangleShape2D_j5ewf")
debug_color = Color(0.998124, 0, 0.149951, 0.42)

[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_body_entered"]
[connection signal="body_entered" from="ActivateDoorArea2D" to="." method="_on_activate_door_area_2d_body_entered"]
